--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -43,7 +43,7 @@
 @import "components/modul_youTube";
 @import "components/modul_imageGallery";
 @import "components/modul_logoleisteSlider";
-@import "components/modul_tabelle";
+//@import "components/modul_tabelle";
 @import "components/modul_contentText";
 @import "components/modul_formularAntwort";
 
