--- a/assets/sccs/tabelle-mobile.scss
+++ b/assets/sccs/tabelle-mobile.scss
@@ -1,8 +1,8 @@
 // Mixin
-@import "../core/mixin";
+@import "core/mixin";
 
 // Variables
-@import "../core/vars";
+@import "core/vars";
 
 // Core
 @import "core/typography";
