--- a/templates/_include-vendor/code-entwicklung.twig
+++ b/templates/_include-vendor/code-entwicklung.twig
@@ -2,13 +2,39 @@
 
     {% if pageId == 2%}
 
-    <h1>Ich bin eine H1 Überschrift | ygj ÄÜÖ</h1>
 
-    <h2>Ich bin eine H2 Überschrift | ygj ÄÜÖ</h2>
+        <br /><br /><br />
 
-    <h3 class="demo-1 demo-2">Ich bin eine H3 Überschrift | ygj ÄÜÖ</h3>
+    <h1 class="home">MRT-Expertise für<br />Produkte &<br />Entwicklung</h1> <br /><br />
 
-    <h4>Ich bin eine H4 Überschrift | ygj ÄÜÖ</h4>
+
+    <h1>Ich bin eine H1 Überschrift | ygj ÄÜÖ</h1> <br /><br />
+
+    <h2>Ich bin eine H2 Überschrift | ygj ÄÜÖ</h2> <br /><br />
+
+    <h3 class="demo-1 demo-2">Ich bin eine H3 Überschrift | ygj ÄÜÖ</h3> <br /><br />
+
+    <h4>Ich bin eine H4 Überschrift | ygj ÄÜÖ</h4><br /><br />
+
+        <style>
+            .test{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                align-items: stretch;
+                align-content: stretch;
+            }
+        </style>
+
+        <div class="test">
+            <div style="width: 50%" class="textBold">Auszeichnungen & Zertifikate<br />Auszeichnungen & Zertifikate<br />Auszeichnungen & Zertifikate</div>
+            <div style="width: 50%" >Auszeichnungen & Zertifikate<br />Auszeichnungen & Zertifikate<br />Auszeichnungen & Zertifikat</div>
+
+
+        </div>
+
+
 
 
 
