--- a/assets/sccs/core/_typography.scss
+++ b/assets/sccs/core/_typography.scss
@@ -67,29 +67,48 @@ h1, h2, h3, h4 {
 }
 
 h1, .h1 {
-  @include responsive-font(31px, 99px, $h1-font-family, $base-line-height-h1);
 
-  color: $wl-color-black;
-  margin-top: -0.05em;
-  margin-bottom: -0.04em;
+  &.home{
+    @include responsive-font(40px, 70px, $h1-font-family, $base-line-height-h1);
+
+    margin-top: -0.05em;
+    margin-bottom: -0.04em;
+  }
+
 }
+
+h1, .h1 {
+  @include responsive-font(32px, 60px, $h1-font-family, $base-line-height-h1);
+
+  margin-top: 0;
+  margin-bottom: -0.2em;
+}
+
 h2, .h2 {
-  @include responsive-font(26px, 52px, $h2-font-family, $base-line-height-h2);
+  @include responsive-font(28px, 45px, $h2-font-family, $base-line-height-h2);
 
-  margin-top: -0.05em;
-  margin-bottom: -0.04em;;
+  margin-top: 0;
+  margin-bottom: -0.2em;;;
 }
-h3, .h3 {
-  @include responsive-font(21px, 48px, $h3-font-family, $base-line-height-h3);
 
-  margin-top: -0.05em;
-  margin-bottom: -0.04em;
+h3, .h3 {
+  @include responsive-font(24px, 34px, $h3-font-family, $base-line-height-h3);
+
+  margin-top: 0;
+  margin-bottom: -0.2em;
 }
 h4, .h4 {
-  @include responsive-font(20px, 45px, $h4-font-family, $base-line-height-h3);
+  @include responsive-font(20px, 26px, $h4-font-family, $base-line-height-h3);
 
-  margin-top: -0.05em;
-  margin-bottom: -0.04em;
+  margin-top: 0;
+  margin-bottom: -0.2em;
+}
+
+.textBold {
+  @include responsive-font(18px, 23px, $font-family-DINNextLTPro-bold, 1.34);
+
+  margin-top: 0;
+  margin-bottom: -0.2em;
 }
 
 
